# rocm_kernel_macros

./: Cargo.toml  readme.md
src/: cargo_config_template.toml  cargo_template.toml  lib.rs  preamble.rs  structure.rs
